idea/testData/multiModuleHighlighting/hierarchicalExpectActualMatching/weaklyIncompatibleActualInIntermediateModule/top/top.kt
package sample

expect class <!AMBIGUOUS_ACTUALS("Class 'A'", "middle, middle")!>A<!> {
    fun f()
}